deploy the docs to gh-pages

--- a/.github/workflows/toolkit-build-docs-ci.yml
+++ b/.github/workflows/toolkit-build-docs-ci.yml
@@ -32,18 +32,8 @@ jobs:
         source ~/venv/bin/activate
         make clean
         make html
-        cp -r build/html ~/html
-    - name: push html docs to websites repo
-      env:
-        GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        USER_EMAIL: leela.vadlamudi@gmail.com
-        USER_NAME: Leela
-      run: |
-        git config --global user.email $USER_EMAIL
-        git config --global user.name $USER_NAME
-        git clone https://.:$GITHUB_ACCESS_TOKEN@github.com/rorodata/websites.git
-        cd websites
-        cp -r ~/html toolkit.docs.rorodata.net
-        git add toolkit.docs.rorodata.net/html
-        git commit -m "Updated toolkit docs - $GITHUB_SHA"
-        git push -u origin master
+    - name: Deploy docs
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: build/html
